--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </div>
         <!-- для дива с кнопками добавил ID -->
         <div id="control" class="control">
-            <button class="button" id="btn-kick">Thunder Jolt</button>
+            <button class="button" id="btn-kick"></button>
+            <button class="button" id="btn-bonus-kick"></button>
         </div>
 
         <div class="pokemon enemy">
@@ -57,6 +58,7 @@
             </div>
         </div>
     </div>
+    <!-- div для лога боя -->
     <div id="logBatle">
     </div>
 </div>
