--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
         <!-- для дива с кнопками добавил ID -->
         <div id="control" class="control">
-            <button class="button" id="btn-kick"></button>
-            <button class="button" id="btn-bonus-kick"></button>
+            <button class="button" id="btn-kick">Thunder Jolt!</button>
+            <button class="button" id="btn-bonus-kick">Bonus kick!</button>
         </div>
 
         <div class="pokemon enemy">
