--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="pokemon player1">
             <span class="lvl">Lv. 1</span>
 
-            <img src="http://sify4321.000webhostapp.com/pikachu.png" class="sprite">
+            <img id="img-player1" src="http://sify4321.000webhostapp.com/pikachu.png" class="sprite">
 
             <div class="details">
                 <h2 class="name" id="name-player1">
@@ -42,7 +42,7 @@
         <div class="pokemon player2">
             <span class="lvl">Lv. 1</span>
 
-            <img src="http://sify4321.000webhostapp.com/charmander.png" class="sprite">
+            <img id="img-player2" src="http://sify4321.000webhostapp.com/charmander.png" class="sprite">
 
             <div class="details">
                 <h2 class="name" id="name-player2">
